--- a/Staff/src/main/res/layout/activity_pemasangan_selesai.xml
+++ b/Staff/src/main/res/layout/activity_pemasangan_selesai.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu_pelanggan.restart.RestartActivity">
+    tools:context=".menu_pelayanan.pemasangan_selesai.PemasanganSelesaiActivity">
 
     <LinearLayout
         android:id="@+id/ll_header"
@@ -31,43 +31,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="@string/restart_router"
+            android:text="@string/pemasangan_selesai"
             android:textColor="@color/black"
             android:textSize="18sp" />
 
     </LinearLayout>
 
-    <SearchView
-        android:id="@+id/sv_product"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="24dp"
-        android:background="@drawable/bg_searchview"
-        android:iconifiedByDefault="false"
-        android:padding="8dp"
-        android:queryHint="Cari Pelanggan"
-        app:layout_constraintBottom_toTopOf="@+id/ll_list_item"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_header" />
-
-    <LinearLayout
-        android:id="@+id/ll_list_item"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_pemasangan_selesai"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="120dp"
-        android:orientation="vertical"
+        android:layout_marginTop="60dp"
         android:paddingHorizontal="24dp"
+        android:paddingTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_user_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_user" />
-
-    </LinearLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_pemasangan_selesai" />
 
     <com.github.ybq.android.spinkit.SpinKitView
         android:id="@+id/loading_anim"
@@ -76,9 +57,21 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         app:SpinKit_Color="@color/secondaryLightColor"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_pemasangan_selesai"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/ll_list_item" />
+        app:layout_constraintTop_toTopOf="@+id/rv_pemasangan_selesai" />
+
+    <ImageView
+        android:id="@+id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/icon_warning"
+        android:src="@drawable/ic_empty"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_pemasangan_selesai"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/rv_pemasangan_selesai" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
