--- a/Staff/src/main/res/layout/activity_pembayaran.xml
+++ b/Staff/src/main/res/layout/activity_pembayaran.xml
@@ -72,11 +72,20 @@
                 app:smsp_selectedItemListColor="@color/primaryDarkColor" />
 
             <TextView
-                android:id="@+id/payment_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:text="@string/pembayaran_nama"
+                android:text="@string/pembayaran_text_detail"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/payment_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="4dp"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -84,8 +93,8 @@
                 android:id="@+id/payment_invoice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                android:text="@string/pembayaran_invoice"
+                android:layout_marginVertical="4dp"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
@@ -93,8 +102,8 @@
                 android:id="@+id/payment_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginVertical="8dp"
-                android:text="@string/pembayaran_tagihan"
+                android:layout_marginVertical="4dp"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
