--- a/Staff/src/main/res/layout/activity_main.xml
+++ b/Staff/src/main/res/layout/activity_main.xml
@@ -39,11 +39,13 @@
         android:layout_marginEnd="18dp"
         android:background="@null"
         android:contentDescription="@string/btn_setting"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:src="@drawable/ic_setting"
-        android:tint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/ll_body"
         app:layout_constraintEnd_toStartOf="@+id/btn_notification"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
     <ImageButton
         android:id="@+id/btn_notification"
@@ -52,6 +54,8 @@
         android:layout_marginEnd="18dp"
         android:background="@null"
         android:contentDescription="@string/btn_notification"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
         android:src="@drawable/ic_notification"
         app:layout_constraintBottom_toTopOf="@+id/ll_body"
         app:layout_constraintEnd_toEndOf="parent"
