--- a/Staff/src/main/res/layout/activity_main.xml
+++ b/Staff/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="18dp"
-        android:background="@null"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/btn_setting"
         android:minWidth="48dp"
         android:minHeight="48dp"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="18dp"
-        android:background="@null"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/btn_notification"
         android:minWidth="48dp"
         android:minHeight="48dp"
