--- a/Staff/src/main/res/layout/activity_splash_screen.xml
+++ b/Staff/src/main/res/layout/activity_splash_screen.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="app logo" />
+        android:contentDescription="@string/app_logo" />
 
     <TextView
         android:id="@+id/textView"
