--- a/Indirisma/src/main/res/values/colors.xml
+++ b/Indirisma/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primaryColor">#00abf4</color>
+    <color name="primaryLightColor">#67ddff</color>
+    <color name="primaryDarkColor">#007cc1</color>
+    <color name="secondaryColor">#f44900</color>
+    <color name="secondaryLightColor">#ff7d3a</color>
+    <color name="secondaryDarkColor">#b90000</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#000000</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
