--- a/Indirisma/src/main/res/values/themes.xml
+++ b/Indirisma/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="Theme.Indirisma" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Indirisma" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryVariant">@color/primaryLightColor</item>
