--- a/Korem/src/main/res/layout/activity_main.xml
+++ b/Korem/src/main/res/layout/activity_main.xml
@@ -42,16 +42,29 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.denzcoskun.imageslider.ImageSlider
+        android:id="@+id/image_slider"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="12dp"
+        app:iss_auto_cycle="true"
+        app:iss_corner_radius="20"
+        app:iss_delay="0"
+        app:iss_period="5000"
+        app:iss_placeholder="@drawable/ic_empty"
+        app:iss_title_background="@drawable/gradient"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_profile" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_profile"
-        app:layout_constraintVertical_bias="0.263">
+        app:layout_constraintTop_toBottomOf="@+id/image_slider">
 
         <LinearLayout
             android:id="@+id/btn_presensi"
